--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Chinapeace.GitHub.io</h1>
-      <h2 class="project-tagline">my blog!</h2>
+      <h1 class="project-name">老板、扯淡、我的白</h1>
+      <h2 class="project-tagline">这是一个新的开始！！！！</h2>
     </section>
 
     <section class="main-content">
