--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
-  <title>Chinapeace.GitHub.io</title>
-  <meta name="description" content="my blog!">
+  <title>绝迹重生专注大数据与未来</title>
+  <meta name="description" content="用我的双手，成就你的梦想！">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
@@ -22,42 +22,42 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">Chinapeace.GitHub.io</h1>
+      <h1 class="title">绝迹重生专注大数据与未来</h1>
     </header>
     <div id="container">
-      <p class="tagline">my blog!</p>
+      <p class="tagline">用我的双手，成就你的梦想！</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/chinapeace" class="code">View Chinapeace.GitHub.io on GitHub</a>
+          <a href="https://github.com/chinapeace" class="code">View 绝迹重生专注大数据与未来 on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
           <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="step1" class="anchor" href="#step1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>step1</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>做一件你认为你不可能完成的事，然后坚持下去。你会发现你的生活将发生翻天覆地的变化。</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="step2" class="anchor" href="#step2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>step2</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>本来我就一无所有，大不了也就是一无所有，我并没有失去什么；但是，如果我不去拼搏，我将永远一无所有。</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="step3" class="anchor" href="#step3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>step3</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>每一个优秀的人，都有一段沉默的时光。那一段时光，是付出了很多努力，忍受孤独和寂寞，不抱怨不诉苦，日后说起时，连自己都能被感动的日子。</p>
+
+<h3>
+<a id="step4" class="anchor" href="#step4" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>step4</h3>
+
+<p><strong>do it! do it! do it!</strong></p>
+
+<h3>
+<a id="联系我" class="anchor" href="#%E8%81%94%E7%B3%BB%E6%88%91" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>联系我</h3>
+
+<p>你懂的</p>
         </article>
       </div>
     </div>
