--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 text-center logo-wrap">
-						<div id="fh5co-logo"><a href="index.html">大先生Swarm空投攻略<span>.</span></a></div>
+						<div id="fh5co-logo"><a href="index.html">大先生技术站<span>.</span></a></div>
 					</div>
 					<div class="col-xs-12 text-center menu-1 menu-wrap">
 						<ul>
