--- a/menu.html
+++ b/menu.html
@@ -7,8 +7,7 @@
 <title>大先生的技术站</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
-	<meta name="keywords"
-		content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
+<meta name="keywords" content="swarm,bzz, bee, bee-clef, 以太坊, 区块链, 比特币, 教程, windows" />
 	<meta name="author" content="freehtml5.co" />
 
 	<!-- 
@@ -71,7 +70,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 text-center logo-wrap">
-						<div id="fh5co-logo"><a href="index.html">大先生Swarm空投攻略<span>.</span></a></div>
+						<div id="fh5co-logo"><a href="index.html">大先生技术站<span>.</span></a></div>
 					</div>
 					<div class="col-xs-12 text-center menu-1 menu-wrap">
 						<ul>
