--- a/menu.html
+++ b/menu.html
@@ -160,7 +160,7 @@
 											<div class="display-t js-fullheight">
 												<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 													<h1>服务器要开哪些端口吗？</h1>
-													<h2>云服务器的话打开1633 1634 自用设备看bee日志是否正常通讯即可</h2>
+													<h2>云服务器的话打开1634 自用设备看bee日志是否正常通讯即可</h2>
 												</div>
 											</div>
 												<div class="display-t js-fullheight">
@@ -204,7 +204,7 @@
 														<div class="display-t js-fullheight">
 															<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 																<h1>有查看多少节点在线的浏览器吗？</h1>
-																<h2>访问https://docs.ethswarm.org/debug-api/  使用查节点的api访问</h2>
+																<h2>访问https://beenodes.live/ </h2>
 															</div>
 														</div>
 														<div class="display-t js-fullheight">
