--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,7 @@
 	<title>Tasty &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
-	<meta name="keywords"
-		content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
+<meta name="keywords" content="swarm,bzz, bee, bee-clef, 以太坊, 区块链, 比特币, 教程, windows" />
 	<meta name="author" content="freehtml5.co" />
 
 	<!-- 
@@ -78,7 +77,7 @@
 							<li ><a href="index.html">首页</a></li>
 							<li><a href="menu.html">FAQ</a></li>
 								<li><a href="about.html">资源地址汇总</a></li>
-								<li><a href="gallery.html" style="color: red;">捐赠支持</a></li>
+								<!--<a href="gallery.html" style="color: red;">捐赠支持</a></li> -->
 							<!--	<li class="has-dropdown">
 								<a href="gallery.html">Gallery</a>
 								<ul class="dropdown">
