--- a/menu.html
+++ b/menu.html
@@ -77,7 +77,7 @@
 							<li ><a href="index.html">首页</a></li>
 							<li class="active"><a href="menu.html">FAQ</a></li>
 								<li><a href="about.html">资源地址汇总</a></li>
-									<li><a href="gallery.html" style="color: red;">捐赠支持</a></li>
+									<!--<a href="gallery.html" style="color: red;">捐赠支持</a></li> -->
 							<!--	<li class="has-dropdown">
 								<a href="gallery.html">Gallery</a>
 								<ul class="dropdown">
