--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
 					<div class="col-xs-12 text-center menu-1 menu-wrap">
 						<ul>
 							<li><a href="index.html">首页</a></li>
-							<li><a href="menu.html">FAQ</a></li>
+							<li><a href="faq.html">FAQ</a></li>
 							<li class="active"><a href="about.html">资源地址汇总</a></li>
 							<!--<a href="gallery.html" style="color: red;">捐赠支持</a></li> -->
 							<!--	<li class="has-dropdown">
