--- a/about.html
+++ b/about.html
@@ -89,6 +89,7 @@
 							</li>
 							<li><a href="reservation.html">Reservation</a></li>
 							<li><a href="about.html">About</a></li> -->-->
+							<li><a href="pdf/latest.bookofswarm.eth.ZH_CN.pdf">Swarm中文技术白皮书</a></li>
 							<li ><a href="contact.html" style="color: red;">与我联系</a></li>
 						</ul>
 					</div>
