--- a/contact.html
+++ b/contact.html
@@ -88,6 +88,7 @@
 							</li>
 							<li><a href="reservation.html">Reservation</a></li>
 							<li><a href="about.html">About</a></li> -->-->
+							<li><a href="pdf/latest.bookofswarm.eth.ZH_CN.pdf">Swarm中文技术白皮书</a></li>
 							<li class="active" style="color: red;"><a href="contact.html">与我联系</a></li>
 						</ul>
 					</div>
